@startuml

class Playlist {
    -@DynamoDBHashKey id : String
    -name : String
    -customerId : String
    -songCount : Integer
    -tags : Set<String>
    -songList : List<AlbumTrack>
}
class AlbumTrack {
    -@DynamoDBHashKey asin : String
    -@DynamoDBRangeKey trackNumber : Integer
    -albumName : String
    -songTitle : String
}

class AlbumTrackDao {
    -dynamoDbMapper : DynamoDBMapper
}
class PlaylistDao {
    -dynamoDbMapper : DynamoDBMapper
    +getPlaylist(String) : Playlist
    +savePlaylist(Playlist) : Playlist
}

class CreatePlaylistActivity {
    +handleRequest(CreatePlaylistRequest, Context) : CreatePlaylistResult
}
class GetPlaylistActivity {
    +handleRequest(GetPlaylistRequest, Context) : GetPlaylistResult
}
class GetPlaylistSongsActivity {
    +handleRequest(GetPlaylistSongsRequest, Context) : GetPlaylistSongsResult
}
class UpdatePlaylistActivity {
    +handleRequest(UpdatePlaylistRequest, Context) : UpdatePlaylistResult
}
class AddSongToPlaylistActivity {
    +handleRequest(AddSongToPlaylistRequest, Context) : AddSongToPlaylistResult
}

class AlbumTrackNotFoundException {}
class InvalidAttributeValueException {}
class PlaylistNotFoundException {}
class InvalidAttributeChangeException {}
class InvalidAttributeValueException {}
class InvalidAttributeException {}

InvalidAttributeChangeException --|> InvalidAttributeException
InvalidAttributeValueException --|> InvalidAttributeException
Playlist o-- AlbumTrack
AddSongToPlaylistActivity o-- AlbumTrackDao
CreatePlaylistActivity o-- PlaylistDao
AddSongToPlaylistActivity o-- PlaylistDao
GetPlaylistActivity o-- PlaylistDao
GetPlaylistSongsActivity o-- PlaylistDao
UpdatePlaylistActivity o-- PlaylistDao

@enduml